home and faculty page very close to completed, about and classes pages still need styled.

--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -2,6 +2,7 @@ body, html {
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
   color: #ffffff;
+  width: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -11,6 +12,32 @@ a {
   color: white;
   font-size: 1rem;
   font-weight: bold;
+}
+
+.navbar-nav>li>a:focus {
+  color: yellow;
+}
+
+h1 {
+  font-size: 1.875rem;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+h2 {
+  font-size: 1.25rem;
+  line-height: 1.2;
+  font-weight: bold;
+}
+p {
+  font-size: 1rem;
+  line-height: 1.6;
+}
+
+@media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 3.125rem;
+    line-height: 1;
+  }
 }
 
 /* HEADER NAV */
@@ -25,8 +52,11 @@ header .container-fluid {
     padding-left: 3.4375rem;
   }
 }
+.navbar {
+  min-height: 0;
+}
 .navbar-nav {
-  margin-top: 12px;
+  margin-top: 8px;
 }
 .navbar-fixed-top {
   height: 2.5rem;
@@ -36,11 +66,17 @@ header .container-fluid {
   max-height: 50px;
 }
 .navbar-brand {
-  padding-top: 10px;
+  padding-top: 5px;
 }
 
 .navbar-header::after {
   clear: none;
+}
+header .navbar-nav {
+  float: right;
+}
+header .navbar-right {
+  margin-right: 0;
 }
 header .nav>li {
   display: inline;
@@ -48,12 +84,8 @@ header .nav>li {
 header .nav>li>a {
   display: inline;
 }
-header .navbar-nav {
-  float: right;
-}
-
-header .navbar-right {
-  margin-right: 0;
+header .nav>li:last-child>a {
+  padding-right: 0;
 }
 
 @media only screen and (min-width: 768px) {
@@ -64,49 +96,155 @@ header .navbar-right {
     padding-top: 8px;
   }
   .navbar-nav {
-    margin-top: 15px;
+    margin-top: 20px;
   }
   header .nav>li:last-child {
     margin-right: -15px;
   }
 }
-
-
 @media only screen and (max-width: 550px) {
   .navbar-nav a {
     font-size: .75rem;
   }
 }
+
+/* JUMBOTRON */
 .jumbotron {
   margin-bottom: 0;
+  padding-top: 2.5rem;
 }
-.jumbotron-fluid {
-  height: 31.25rem;
+.alt-jumbotron {
+  padding-bottom: 0;
 }
 
-.blue-container {
+.blueish-purple-container, .purple-container {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  padding-bottom: 1.875rem;
+}
+
+.blueish-purple-container p, .purple-container p {
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+.blueish-purple-container h2, .purple-container h2 {
+  font-size: 1.25rem;
+  line-height: 1.2;
+}
+.blueish-purple-container a, .purple-container a {
+  font-size: 1rem;
+}
+
+.blueish-purple-container {
   background: rgba(120,73,225,0.9);
 }
 .purple-container {
   background: rgba(173,74,226,0.9);
 }
 
-.alt-jumbotron {
-  padding-bottom: 0;
-  display: flex;
-  align-items: flex-end;
+@media only screen and (min-width: 768px) {
+  .blueish-purple-container, .purple-container {
+    padding-left: 1.875rem;
+    padding-right: 3.4375rem;
+    height: 12.1875rem;
+  }
+  .blueish-purple-container h2, .purple-container h2 {
+    font-size: 1.875rem;
+    line-height: 1.4;
+    margin-top: 1.875rem;
+    margin-bottom: 0.625rem;
+  }
+  .blueish-purple-container p, .purple-container p {
+    margin-top: 0;
+  }
 }
+
+@media only screen and (min-width: 992px) {
+  .alt-jumbotron {
+    padding-bottom: 0;
+    display: flex;
+    align-items: flex-end;
+    height: 31.25rem;
+  }
+  .alt-jumbotron .container-fluid {
+    margin-right: 0;
+    width: 25rem;
+  }
+  .blueish-purple-container, .purple-container {
+    height: 25rem;
+    width: 25rem;
+    padding-left: 3rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+  .blueish-purple-container h2, .purple-container h2 {
+    font-size: 2.25rem;
+    line-height: 1.2;
+    padding-bottom: 1.25rem;
+    margin: 0;
+  }
+}
+.jumbo-content {
+  width: 18.5rem;
+  margin-top: 7.125rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+.jumbo-content h1 {
+  margin-bottom: 1.625rem;
+}
+.jumbo-content p {
+  margin-top: 0;
+  margin-bottom: 3.875rem;
+}
+.jumbo-content a {
+  margin-bottom: 3.125rem;
+}
+
 
 .container-right {
   padding: 0;
 }
 
-@media only screen and (min-width: 970px) {
+.btn {
+  padding: 1.25rem 3.125rem;
+  font-size: 1.375rem;
+  font-weight: bold;
+}
+.btn-primary {
+  border-radius: 2px;
+  background: #f5a623;
+  border-color: #f5a623;
+}
+
+@media only screen and (min-width: 768px) {
   .container-right {
     padding-right: 0;
   }
+  .jumbotron {
+    padding-top: 3.875rem;
+  }
+  .jumbo-content {
+    margin-top: 9.475rem;
+    width: 45rem;
+  }
+  .jumbo-content h1 {
+    margin-bottom: 2.6875rem;
+  }
+  .jumbo-content p {
+    font-size: 1.5rem;
+    line-height: 1.5;
+    margin-top: 0;
+    margin-bottom: 5rem;
+  }
+  .jumbo-content a {
+    margin-bottom: 3.125rem;
+  }
 }
-
 
 
 
@@ -137,7 +275,8 @@ footer {
 
 footer .navbar-right {
   display: none;
-  margin-right: 15px;
+  margin-right: 0;
+  padding-right: 3.687rem;
 }
 footer .navbar-brand {
   display: none;
@@ -149,6 +288,8 @@ footer .navbar-right li:first-child:after {
 .footer-contact {
   height: 8.75rem;
   padding-top: 1.875rem;
+}
+.footer-contact p {
   font-size: .625rem;
   letter-spacing: 0.5px;
 }
@@ -175,9 +316,11 @@ footer .navbar-right li:first-child:after {
   }
   .footer-contact {
     height: 15rem;
+    padding-top: 5rem;
+  }
+  .footer-contact p {
     font-size: .875rem;
     letter-spacing: 0.7px;
-    padding-top: 5rem;
   }
   footer .navbar-right {
     display: inline-flex;
