--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -4,6 +4,11 @@
   background-position: center;
   background-size: cover;
   text-align: center;
+  padding-bottom: 0;
+}
+
+#home-banner h1 {
+  margin-top: 0;
 }
 
 #booty {
