--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -84,6 +84,9 @@ header .nav>li {
 header .nav>li>a {
   display: inline;
 }
+.navbar-inverse .navbar-nav>li>a.active, footer a:focus, footer a:hover {
+  color: #f5a623;
+}
 header .nav>li:last-child>a {
   padding-right: 0;
 }
@@ -115,6 +118,9 @@ header .nav>li:last-child>a {
 }
 .alt-jumbotron {
   padding-bottom: 0;
+  height: 31.25rem;
+  display: flex;
+  align-items: flex-end;
 }
 
 .blueish-purple-container, .purple-container {
@@ -165,7 +171,6 @@ header .nav>li:last-child>a {
     padding-bottom: 0;
     display: flex;
     align-items: flex-end;
-    height: 31.25rem;
   }
   .alt-jumbotron .container-fluid {
     margin-right: 0;
