--- a/resources/css/classes.css
+++ b/resources/css/classes.css
@@ -9,10 +9,17 @@
 
 #classes-banner-img {
   padding: 0;
+  overflow: hidden;
+  margin: 0 0 0 -85px;
+}
+
+#classes-banner-img img {
+ height: 28.688rem;
 }
 
 .classes-content {
   margin-bottom: 0;
+  text-align: center;
 }
 .classes-content h1 {
   color: #8a54ff;
@@ -29,12 +36,66 @@ h1 {
   color: #8a54ff;
 }
 
+.course {
+  width: 17.5rem;
+  margin: 0 auto 2.25rem;
+}
+
 
 .course p:nth-child(2n+2){
   font-weight: bold;
   font-size: 1.125rem;
 }
+.course p:nth-child(1n+2){
+  font-size: 1rem;
+  color: #000000;
+  line-height: 1.5;
+}
 .course p:last-child {
   font-weight: lighter;
   font-size: 85%;
+  margin-bottom: 0;
+  line-height: 1.7;
+}
+
+@media only screen and (min-width: 768px) {
+  #classes-banner-img {
+    overflow: visible;
+  }
+  #classes-banner-img img {
+   height: auto;
+  }
+  .course {
+    width: 18.75rem;
+    margin-bottom: 2.25rem;
+  }
+  .course p:last-child {
+    line-height: 1.5;
+    font-size: 1rem;
+  }
+  .course p:nth-child(1n+2){
+    font-size: 1.125rem;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .center {
+    display: flex;
+    align-items: center;
+  }
+  .classes-content h1 {
+    margin-bottom: 4rem;
+  }
+  .course {
+    width: 25rem;
+    margin: 0 1.125rem 3.75rem;
+  }
+  .course-list {
+    margin-top: 5.3125rem;
+  }
+}
+
+
+footer {
+  color: #ffffff;
 }
