added aria roles

--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -306,6 +306,7 @@ footer .navbar-right {
 }
 footer .navbar-brand {
   display: none;
+  padding-left: 3.4375rem;
 }
 
 footer .navbar-right li:first-child:after {
